# Sorting-Performance-Analyzer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: benchmark.h  dataset_generator.h  sorting_algorithms.h
src/: benchmark.cpp  bubble_sort.cpp  dataset_generator.cpp  insertion_sort.cpp  merge_sort.cpp  quick_sort.cpp
